--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-const MONGODB_URI = 'mongodb+srv://ashtyn:ashtyn@cluster0.r5yfh.mongodb.net/pagination?retryWrites=true&w=majority'
+MONGODB_URI = 'mongodb+srv://ashtyn:ashtyn@cluster0.r5yfh.mongodb.net/pagination?retryWrites=true&w=majority'
